# Hub

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  lint.yml
apps/assistant-core/: Cargo.toml
apps/assistant-core/migrations/: 0001_init.sql  0002_memory_enhancements.sql  0003_agents.sql
apps/assistant-core/src/: api.rs  app.rs  config.rs  lib.rs  main.rs  mcp_client.rs  metrics.rs  prompt.rs  realtime.rs  realtime_audio.rs  scheduler.rs  stt.rs  telemetry.rs  tools.rs  wake.rs  wake_porcupine.rs
apps/assistant-core/src/agents/: mod.rs  runtime.rs
apps/assistant-core/src/gatekeeper/: approvals.rs  mod.rs  policy.rs  provenance.rs
apps/assistant-core/src/memory/: context_pack.rs  mod.rs
apps/assistant-core/src/research/: mod.rs  pack.rs  pipeline.rs  types.rs
apps/assistant-core/src/research/agents/: judge.rs  mod.rs  orchestrator.rs  worker.rs
apps/assistant-core/src/system_map/: digest.rs  mod.rs  model.rs  scan.rs
apps/assistant-core/tests/: agents_api.rs  agents_api_ext.rs  agents_ctr.rs  agents_memory.rs  agents_sse.rs  arxiv.rs  chat_stream_persistence.rs  codex_api.rs  cors.rs  e2e_arxiv_brief.rs  e2e_context_pack.rs  e2e_scheduler_artifact.rs  health.rs  installer.rs  memory.rs  metrics.rs  policy.rs  project_init.rs  realtime_audio.rs  realtime_chat_append.rs  realtime_mock.rs  schedules.rs  system_map.rs  tools.rs
apps/ui-tui/: Cargo.toml
apps/ui-tui/src/: app.rs  audio.rs  keymap.rs  main.rs  theme.rs
apps/ui-tui/src/screens/: agents.rs  chat.rs  codex.rs  dashboard.rs  memory.rs  mod.rs  reports.rs  research_arxiv.rs  settings.rs  tasks.rs  tools.rs
config/: foreman.toml  schedules.toml  steamgames.toml
config/policy.d/: 00-defaults.yaml  10-local-overrides.yaml  20-shell-allowlist.yaml  30-codex.yaml  40-storage-arxiv.yaml
config/tools.d/: arxiv.json  codex.json  fs.json  git.json  installer.json  news.json  proc.json  shell.json  steam.json
crates/foreman-mcp/: Cargo.toml
crates/foreman-mcp/src/: lib.rs
crates/foreman-memory/: Cargo.toml
crates/foreman-memory/src/: lib.rs
crates/foreman-policy/: Cargo.toml
crates/foreman-policy/src/: lib.rs
crates/foreman-telemetry/: Cargo.toml
crates/foreman-telemetry/src/: lib.rs
crates/foreman-types/: Cargo.toml
crates/foreman-types/src/: lib.rs
docs/: ARCHITECTURE.md  MEMORY.md  Openai Realtime API.txt  POLICY.md  Personal Assistant Plan.md  README.md  REALTIME.md  REPO_LAYOUT.md  Realtime conversations - OpenAI API.html  SYSTEM_MAP.md  TESTING.md  TOOLS.md  WEBUI_SPEC.md  WIRING_MATRIX.md
docs/Realtime conversations - OpenAI API_files/: BF9IvIls9H.css  BKgnmVGsDB.css  C1qsQqHYvg.css  CS3MsMsuRc.css  CwkvzHVAq3.css  D6cNQxzpF3.css  DIR9qn8nS3.css  a.html  gpt-realtime.html  index-BiJs5c82.js
docs/Realtime conversations - OpenAI API_files/a_data/: main.js
docs/Realtime conversations - OpenAI API_files/gpt-realtime_data/: frame.d3b2c03f.js
docs/realtime/: Realtime conversations.txt  Realtime transcription.txt  Using realtime models.txt  Webhooks and server side.txt
mcp-servers/python/arxiv_server/: README.md  pyproject.toml
mcp-servers/python/arxiv_server/arxiv_server/: __main__.py
mcp-servers/python/voice_daemon/: .gitignore  README.md  pyproject.toml
mcp-servers/python/voice_daemon/voice_daemon/: __main__.py  audio.py  engine_base.py  router.py  schemas.py  server.py  wake.py
mcp-servers/python/voice_daemon/voice_daemon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-servers/python/voice_daemon/voice_daemon/engines/: null_tts.py
mcp-servers/rust/arxiv/: Cargo.toml
mcp-servers/rust/arxiv/src/: lib.rs  main.rs
mcp-servers/rust/arxiv/src/arxiv/: client.rs  types.rs
mcp-servers/rust/fs/: Cargo.toml
mcp-servers/rust/fs/src/: lib.rs  main.rs
mcp-servers/rust/git/: Cargo.toml
mcp-servers/rust/git/src/: lib.rs  main.rs
mcp-servers/rust/proc/: Cargo.toml
mcp-servers/rust/proc/src/: lib.rs  main.rs
mcp-servers/rust/shell/: Cargo.toml
mcp-servers/rust/shell/src/: lib.rs  main.rs
plans/: PR-0001-repo-bootstrap.md  PR-0002-assistant-core-skeleton.md  PR-0003-gatekeeper-policy.md  PR-0004-memory-plane-base.md  PR-0005-system-map.md  PR-0006-mcp-core-servers.md  PR-0007-voice-daemon-tts-stt.md  PR-0008-ui-tui-skeleton.md  PR-0009-schedulers-daily-briefs.md  PR-0010-research-servers-arxiv-news.md  PR-0011-installer-server.md  PR-0012-websearch-server.md  PR-0013-debate-agent.md  PR-0014-spec-agent.md  PR-0015-ci-testing-pipeline.md  PR-0016-telemetry-observability.md  PR-0017-final-integration.md  PR-0018-realtime-audio-io.md  PR-0019-wake-sentinel.md  PR-0020-tui-realtime-wiring.md  PR-0021-history-sharing-v2v-t2t.md  PR-0022-realtime-webrtc.md  PR-0023-realtime-bridge.md  PR-0024-realtime-tools-bridge-and-end-call.md  PR-0030-agents-schema-and-memory.md  PR-0031-agents-api-and-supervisor.md  PR-0032-policy-safe-write-tools.md  PR-0033-codex-task-runner.md  PR-0034-agents-tui.md  PR-0035-codex-adapter-refinement.md  PR-0036-agents-sse-and-final-wiring.md  PR-0200-web-ui-cors-and-policy.md  PR-0201-web-ui-scaffold-and-theme.md  PR-0202-web-ui-chat-mvp.md  PR-0203-web-ui-approvals-inline.md  PR-0204-web-ui-agents-ui-and-api.md  PR-0205-web-ui-research-tab.md  PR-0206-web-ui-settings-and-theme.md  PR-0207-web-ui-final-integration.md  README.md
plans/arxiv/: PR-0101-arxiv-rust-server-scaffold.md  PR-0102-arxiv-client-and-tools.md  PR-0103-core-integration-manifest-policy.md  PR-0104-research-framework-and-context-packer.md  PR-0105-scheduler-arxiv-brief.md  PR-0106-ui-tui-research-arxiv.md  PR-0107-multiagent-research-scaffold.md  PR-0108-final-integration-arxiv.md  PR-A100-quick-win-python-arxiv.md  README.md
scripts/: bootstrap.sh  dev-run.sh  install-python.sh  install-rust.sh  run-tui.ps1  run-tui.sh  run-web.sh
web/: .env.local  .env.local.example  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/lib/: api.ts  markdown.ts  query.tsx  sse.ts  store.ts  toast.tsx  types.ts
web/styles/: globals.css
(+29 files in other folders)
