[package]
name = "assistant-core"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "process", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
parking_lot = "0.12"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock", "serde"] }
foreman-policy = { path = "../../crates/foreman-policy" }
foreman-memory = { path = "../../crates/foreman-memory" }
foreman-mcp = { path = "../../crates/foreman-mcp" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
futures-util = "0.3"
tokio-stream = "0.1"
tempfile = { version = "3.10", optional = true }
tokio-tungstenite = { version = "0.21", optional = true, default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tungstenite = { version = "0.23", optional = true, default-features = false, features = ["rustls-tls-webpki-roots"] }
cpal = { version = "0.15", optional = true }
ringbuf = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3.10"
axum = { version = "0.7", features = ["ws", "macros"] }
tokio-tungstenite = { version = "0.21" }
tungstenite = { version = "0.23" }
http-body-util = "0.1"

[lib]
name = "assistant_core"
path = "src/lib.rs"

[features]
default = []
realtime = ["tokio-tungstenite", "tungstenite"]
realtime-audio = ["cpal", "ringbuf", "base64"]
wake-porcupine = []
