[package]
name = "ui-tui"
version = "0.0.1"
edition = "2021"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio", "dep:anyhow"]
http = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:futures-util"]
voice = ["dep:tokio", "dep:reqwest"]

[dependencies]
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
unicode-width = { version = "0.1" }
toml = "0.8"
