[package]
name = "foreman-memory"
version = "0.0.1"
edition = "2021"

[lib]
name = "foreman_memory"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
