[project]
name = "voice-daemon"
version = "0.0.1"
description = "Local TTS/STT voice daemon with WS streaming"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Foreman" }]

[project.optional-dependencies]
servers = [
  "aiohttp>=3.9",
  "websockets>=12",
  "numpy>=1.24",
  "pvporcupine>=3.0.0",
  "sounddevice>=0.4.6",
  "requests>=2.31.0",
]

[project.scripts]
voice-daemon = "voice_daemon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
