[package]
name = "mcp-git"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "io-std", "fs", "process"] }
foreman-mcp = { path = "../../../crates/foreman-mcp" }

[lib]
name = "mcp_git"
path = "src/lib.rs"

[[bin]]
name = "mcp-git"
path = "src/main.rs"
